# fildesh

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Makefile  README.md
.github/: BUILD.bazel  renovate.json  renovate.sxpb
.github/workflows/: BUILD.bazel  lint_manual.yaml  pkg_docker.sxpb  pkg_docker.yaml  pkg_docker.yml  pkg_release.yaml  scan_msvc.yaml  test_bazel.yaml  test_cmake.yaml
compat/: file.c
doc/: architecture.md  index.md
doc/styleguide/: cmake_style.md  fildesh_style.md  git_style.md  sxpb_style.md
eg/: CMakeLists.txt
eg/ansible/: motd.sxpb  play.fildesh
eg/sum/: BUILD.bazel  CMakeLists.txt  add_test.fildesh  dag.fildesh  readme_test.fildesh
eg/sxpb_string/: BUILD.bazel  CMakeLists.txt  grammar.sxpb  grammar_test.c
example/: BUILD.bazel  args.fildesh  convoluted.fildesh  cycle.fildesh  familiar.fildesh  hello.fildesh  name.fildesh  silly.fildesh  test.fildesh  whophys.fildesh
include/fildesh/: fildesh.h  fildesh_compat_string.h  string.hh  sxproto.h
pkg/debian/: make.fildesh  workflow_stage.fildesh
pkg/docker/: BUILD.bazel  README.md  compose.sxpb  compose.yaml
pkg/gentoo/: fildesh.ebuild
pkg/vim/: CMakeLists.txt  common.fildesh  install_home.fildesh  uninstall_home.fildesh
pkg/vim/ftdetect/: sxproto.vim
pkg/vim/ftplugin/: sxproto.vim
pkg/vim/indent/: sxproto.vim
pkg/vim/syntax/: fildesh.vim  sxproto.vim
src/: BUILD.bazel  CMakeLists.txt  elastic_aio.c  elastic_poll.c  fildesh.c  godo.c
src/builtin/: BUILD.bazel  CMakeLists.txt  capture_string.c  cmptxt.c  fildesh_builtin.c  fildesh_builtin.h  replace_string.c  splice.c  sponge.c  sxpb2yaml.c  transpose.c  ujoin.c
src/command/: BUILD.bazel  alias.c  alias.h  hookup.c  hookup.h
src/lib/: BUILD.bazel  CMakeLists.txt  outfile.c  outstream.c
src/lib/kv/: BUILD.bazel
src/lib/xo/: BUILD.bazel  infile.c  instream.c
src/sxproto/: BUILD.bazel  CMakeLists.txt  json.c  parse_sxpb.c  parse_sxpb.h  schema.c  sxpb.c  txtpb.c  value.c  yaml.c
src/syntax/: BUILD.bazel  defstr.c
test/: BUILD.bazel  CMakeLists.txt
test/bazel/: BUILD.bazel
test/benchmark/: BUILD.bazel  benchmark.bzl  grow_mpop_benchmark.cc
test/builtin/: BUILD.bazel  CMakeLists.txt  capture_string_test.fildesh  cmp_test.c  cmptxt_test.c  echocat_test.fildesh  execfd_script_test.fildesh  expect_failure_test.c  fildesh_usage_test.c  godo_test.c  main_smoke_test.c  splice_cat.fildesh  transpose_tab_test.fildesh  xpipe_nested_test.fildesh
test/cc/: BUILD.bazel  string_test.cc
test/command/: BUILD.bazel  CMakeLists.txt  alias_test.c
test/compat/: BUILD.bazel
test/example/: BUILD.bazel  CMakeLists.txt  args_forkonly_test.fildesh  silly.txt
test/expect/: BUILD.bazel
test/fault/: BUILD.bazel  barrier_bail_test.fildesh  executable_bytes_of_test.fildesh  pump_executable_bytes_oxf_test.fildesh
test/flag/: BUILD.bazel  CMakeLists.txt  named_arg_test.fildesh  option_filepath_test.fildesh  setenv_test.fildesh  version_test.fildesh
test/fuzz/: BUILD.bazel  CMakeLists.txt  fuzz.bzl  parse_fildesh_line_fuzz_test.c  parse_fildesh_line_smoke_test.c  parse_sxpb_smoke_test.c
test/fuzz/kv/: BUILD.bazel
test/lab/: lab.fildesh
test/lib/: BUILD.bazel  CMakeLists.txt  alloc_test.c
test/lib/kv/: BUILD.bazel
test/lib/xo/: CMakeLists.txt  read_file_lines_test.c
test/manual/: README.md  grepsrc.fildesh  lint.fildesh  tidy_bazel.fildesh
test/src/: BUILD.bazel  CMakeLists.txt  chatty_test.c  sibling_file_test.c
test/sxproto/: BUILD.bazel  CMakeLists.txt  append_test.c  assign_test.c  parse_test.c  parse_with_schema_test.c  sxpb2json_test.fildesh  sxpb2txtpb_test.fildesh  sxpb2yaml_test.fildesh  toplevel_test.c
test/sxproto/content/: BUILD.bazel  array.json  array.sxpb  array.txtpb  array.yaml  loneof.yaml  manyof.json  manyof.sxpb  manyof.txtpb  manyof.yaml  message.json  message.sxpb  message.yaml  string.json  string.sxpb  string.txtpb  string.yaml
test/syntax/: BUILD.bazel  CMakeLists.txt  alias_ox_test.fildesh  command_test.fildesh  executable_bytes_ofxf_test.fildesh  executable_bytes_oxf_test.fildesh  filepath_xofxof_test.fildesh  tmpfile_xofxof_test.fildesh  wait_xaxaxa_test.fildesh
test/tool/: BUILD.bazel
tool/: BUILD.bazel  cembed.c  cswitch.c  expectish.c
tool/bazel/: cmptxt_test.bzl  fildesh_run.bzl  spawn_test.bzl  sxpb2json.bzl  sxpb2txtpb.bzl  sxpb2yaml.bzl
