load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "istream_test",
    srcs = ["istream_test.cc"],
    deps = ["//:fildesh_cc_lib"],
)

cc_test(
    name = "ostream_test",
    srcs = ["ostream_test.cc"],
    deps = ["//:fildesh_cc_lib"],
)

cc_test(
    name = "string_test",
    srcs = ["string_test.cc"],
    deps = ["//:fildesh_cc_lib"],
)
