load("//test/fuzz:fuzz.bzl", "cc_fuzz_test", "cc_smoke_test")

exports_files([
    "fuzz_common.h",
    "fuzz_main.c",
    "smoke_common.h",
])

cc_fuzz_test(
    name = "grow_mpop_fuzz_test",
    srcs = ["grow_mpop_fuzz_test.c"],
    max_guesses = 50000,
    deps = ["//:fildesh_lib"],
)

cc_fuzz_test(
    name = "mascii_fuzz_test",
    srcs = ["mascii_fuzz_test.c"],
    max_guesses = 1000000,
    deps = ["//:fildesh_lib"],
)

cc_fuzz_test(
    name = "parse_fildesh_line_fuzz_test",
    srcs = [
        "parse_fildesh_line_fuzz_test.c",
    ],
    max_guesses = 100000,
    deps = ["//src/syntax:line_c"],
)

cc_smoke_test(
    name = "parse_fildesh_line_smoke_test",
    srcs = [
        "parse_fildesh_line_fuzz_test.c",
        "parse_fildesh_line_smoke_test.c",
    ],
    deps = ["//src/syntax:line_c"],
)

cc_fuzz_test(
    name = "parse_sxpb_fuzz_test",
    srcs = ["parse_sxpb_fuzz_test.c"],
    max_guesses = 100000,
    deps = ["//:sxproto_lib"],
)

cc_smoke_test(
    name = "parse_sxpb_smoke_test",
    srcs = [
        "parse_sxpb_fuzz_test.c",
        "parse_sxpb_smoke_test.c",
    ],
    deps = ["//:sxproto_lib"],
)
