load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "delimit_edge_test",
    srcs = ["delimit_edge_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "getline_test",
    srcs = ["getline_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "gets_test",
    srcs = ["gets_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "parse_int_test",
    srcs = ["parse_int_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "puts_test",
    srcs = ["puts_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "read_file_lines_test",
    srcs = ["read_file_lines_test.c"],
    data = ["read_file_lines_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "sibling_file_test",
    srcs = ["sibling_file_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "skipstr_test",
    srcs = ["skipstr_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "slicechrs_test",
    srcs = ["slicechrs_test.c"],
    deps = ["//:fildesh_lib"],
)

cc_test(
    name = "urandom_variety_test",
    srcs = ["urandom_variety_test.c"],
    deps = ["//:fildesh_lib"],
)
