load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "chatty_test",
    srcs = ["chatty_test.c"],
    linkopts = select({
        "@platforms//os:linux": ["-lrt"],
        "//conditions:default": [],
    }),
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    deps = ["//:fildesh_lib"],
)
