load("//tool/bazel:fildesh_test.bzl", "fildesh_test")

cc_test(
    name = "append_test",
    srcs = ["append_test.c"],
    deps = ["//:sxproto_lib"],
)

cc_test(
    name = "assign_test",
    srcs = ["assign_test.c"],
    deps = ["//:sxproto_lib"],
)

cc_test(
    name = "create_test",
    srcs = ["create_test.c"],
    deps = ["//:sxproto_lib"],
)

cc_test(
    name = "parse_test",
    srcs = ["parse_test.c"],
    deps = ["//:sxproto_lib"],
)

cc_test(
    name = "parse_with_schema_test",
    srcs = ["parse_with_schema_test.c"],
    deps = ["//:sxproto_lib"],
)

fildesh_test(
    name = "sxpb2json_test",
    srcs = ["sxpb2json_test.fildesh"],
    input_by_option = {
        "array_json": "//test/sxproto/content:array.json",
        "array_sxpb": "//test/sxproto/content:array.sxpb",
        "loneof_json": "//test/sxproto/content:loneof.json",
        "loneof_sxpb": "//test/sxproto/content:loneof.sxpb",
        "manyof_json": "//test/sxproto/content:manyof.json",
        "manyof_sxpb": "//test/sxproto/content:manyof.sxpb",
        "message_json": "//test/sxproto/content:message.json",
        "message_sxpb": "//test/sxproto/content:message.sxpb",
        "string_json": "//test/sxproto/content:string.json",
        "string_sxpb": "//test/sxproto/content:string.sxpb",
    },
)

fildesh_test(
    name = "sxpb2txtpb_test",
    srcs = ["sxpb2txtpb_test.fildesh"],
    input_by_option = {
        "array_sxpb": "//test/sxproto/content:array.sxpb",
        "array_txtpb": "//test/sxproto/content:array.txtpb",
        "loneof_sxpb": "//test/sxproto/content:loneof.sxpb",
        "loneof_txtpb": "//test/sxproto/content:loneof.txtpb",
        "manyof_sxpb": "//test/sxproto/content:manyof.sxpb",
        "manyof_txtpb": "//test/sxproto/content:manyof.txtpb",
        "message_sxpb": "//test/sxproto/content:message.sxpb",
        "message_txtpb": "//test/sxproto/content:message.txtpb",
        "string_sxpb": "//test/sxproto/content:string.sxpb",
        "string_txtpb": "//test/sxproto/content:string.txtpb",
    },
)

fildesh_test(
    name = "sxpb2yaml_test",
    srcs = ["sxpb2yaml_test.fildesh"],
    input_by_option = {
        "array_sxpb": "//test/sxproto/content:array.sxpb",
        "array_yaml": "//test/sxproto/content:array.yaml",
        "loneof_sxpb": "//test/sxproto/content:loneof.sxpb",
        "loneof_yaml": "//test/sxproto/content:loneof.yaml",
        "manyof_sxpb": "//test/sxproto/content:manyof.sxpb",
        "manyof_yaml": "//test/sxproto/content:manyof.yaml",
        "message_sxpb": "//test/sxproto/content:message.sxpb",
        "message_yaml": "//test/sxproto/content:message.yaml",
        "string_sxpb": "//test/sxproto/content:string.sxpb",
        "string_yaml": "//test/sxproto/content:string.yaml",
    },
)
