load("//test/fuzz:fuzz.bzl", "cc_fuzz_test", "cc_smoke_test")

cc_fuzz_test(
    name = "ensure_fuzz_test",
    srcs = ["ensure_fuzz_test.c"],
    max_guesses = 50000,
    deps = ["//:fildesh_lib"],
)

cc_smoke_test(
    name = "ensure_smoke_test",
    srcs = [
        "ensure_fuzz_test.c",
        "ensure_smoke_test.c",
    ],
    deps = ["//:fildesh_lib"],
)

cc_smoke_test(
    name = "brbtree_smoke_test",
    srcs = [
        "brbtree_fuzz_test.c",
        "brbtree_smoke_test.c",
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
    ],
    deps = ["//test/lib/kv:kv_validation_lib"],
)

cc_fuzz_test(
    name = "bstree_fuzz_test",
    srcs = [
        "bstree_fuzz_test.c",
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
    ],
    max_guesses = 50000,
    deps = ["//:fildesh_lib"],
)

cc_smoke_test(
    name = "bstree_smoke_test",
    srcs = [
        "bstree_fuzz_test.c",
        "bstree_smoke_test.c",
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
    ],
    deps = ["//:fildesh_lib"],
)

cc_fuzz_test(
    name = "rbtree_fuzz_test",
    srcs = [
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
        "rbtree_fuzz_test.c",
    ],
    max_guesses = 50000,
    deps = ["//test/lib/kv:kv_validation_lib"],
)

cc_smoke_test(
    name = "rbtree_smoke_test",
    srcs = [
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
        "rbtree_fuzz_test.c",
        "rbtree_smoke_test.c",
    ],
    deps = ["//test/lib/kv:kv_validation_lib"],
)

cc_fuzz_test(
    name = "single_list_fuzz_test",
    srcs = [
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
        "single_list_fuzz_test.c",
    ],
    max_guesses = 50000,
    deps = ["//:fildesh_lib"],
)

cc_smoke_test(
    name = "single_list_smoke_test",
    srcs = [
        "kv_fuzz_common.c",
        "kv_fuzz_common.h",
        "single_list_fuzz_test.c",
        "single_list_smoke_test.c",
    ],
    deps = ["//:fildesh_lib"],
)
