exports_files([
    "array.json",
    "array.sxpb",
    "array.txtpb",
    "array.yaml",
    "loneof.json",
    "loneof.sxpb",
    "loneof.txtpb",
    "loneof.yaml",
    "manyof.json",
    "manyof.sxpb",
    "manyof.txtpb",
    "manyof.yaml",
    "message.json",
    "message.sxpb",
    "message.txtpb",
    "message.yaml",
    "string.json",
    "string.sxpb",
    "string.txtpb",
    "string.yaml",
])
